--- a/package.json
+++ b/package.json
@@ -13,9 +13,13 @@
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
     "formik": "^2.2.9",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.10.0",
+    "sort-by": "^1.2.0",
     "tsx": "^3.12.6",
     "yup": "^1.0.2"
   },
