--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@phosphor-icons/react": "^2.0.8",
     "@radix-ui/react-tabs": "^1.0.3",
+    "@uiw/react-md-editor": "^3.20.7",
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "firebase": "^9.18.0",
