--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "test": "tsx ./src/controllers/firebase_realtime_database.ts"
+    "test-controller": "tsx ./src/controllers/firebase_realtime_database.ts",
+    "test":"jest --detectOpenHandles"
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.0.8",
@@ -29,12 +30,16 @@
     "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@jest/globals": "^29.5.0",
+    "@types/jest": "^29.5.1",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "ts-jest": "^29.1.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   }
